# hashcc

./: .SRCINFO-aur-stable  .gitignore  AUR-PUBLISHING.md  Cargo.toml  LICENSE-MIT  PKGBUILD  PKGBUILD-aur  PKGBUILD-aur-stable  README.md  RENAME-SUMMARY.md  build-package.sh
src/: main.rs  main_copy.rs
