[package]
name = "hashsum"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
blake3 = "1.5"
walkdir = "2.5"
hex = "0.4"
rayon = "1.10"
memmap2 = "0.9"
globset = "0.4"

# Optional deps
indicatif = { version = "0.17", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = []
progress = ["dep:indicatif"]
archives = ["dep:zip", "dep:tar", "dep:flate2"]